2008-07-23  Timo Teras  <timo.teras@iki.fi>
        * src/libipsec/Makefile.am
          src/racoon/Makefile.am
          src/setkey/Makefile.am : do not remove flex/bison generated files
          in distclean, also add the generated header file as BUILT_SOURCES
          and use the standard autotools rule for generating them

2008-07-22  Yvan Vanhullebus  <vanhu@netasq.com>
	From Kohki Ohhira <ohhira@src.ricoh.co.jp>:
	* src/racoon/proposal.c: fixed some memory leaks, when malloc
	  fails or when peer sends invalid proposals.

2008-07-21  Matthew Grooms
	* src/racoon/cfparse.y
	  src/racoon/cftoken.l
	  src/racoon/isakmp_cfg.c
	  src/racoon/isakmp_xauth.c
	  src/racoon/isakmp_xauth.h
	  src/racoon/main.c
	  src/racoon/racoon.conf.5
	  src/racoon/session.c : add radius config options for racoon.conf

src/racoon/isakmp_cfg.c : fix hybrid enabled builds

2008-07-21  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/cfparse.y : do not set default gss id if xauth is used
	* src/racoon/isakmp_agg.c
	  src/racoon/isakmp_base.c
	  src/racoon/isakmp_ident.c
	  src/racoon/vendorid.c
	  src/racoon/vendorid.h : separate generic vendor id handling to
	  a new function and use it

2008-07-14  Matthew Grooms
	* src/racoon/isakmp_cfg.c : fix hybrid enabled builds

2008-07-14  Matthew Grooms
	* src/racoon/crypto_openssl.c
	  src/racoon/eaytest.c
	  src/racoon/misc.c
	  src/racoon/misc.h
	  src/racoon/racoonctl.c : fix conflict with freebsd8 hexdump()

2008-07-14  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/handler.h
	  src/racoon/isakmp.c
	  src/racoon/isakmp_agg.c
	  src/racoon/isakmp_ident.c
	  src/racoon/isakmp_inf.c
	  src/racoon/isakmp_inf.h
	  src/racoon/isakmp_quick.c
	  src/racoon/strnames.c : clean ups to notification payload handling,
          and handle INITIAL-CONTACT notification in last main mode exchange
	  (delayed) and during quick mode exchanges (Track:264)
	* src/racoon/handler.h
	  src/racoon/ipsec_doi.c
	  src/racoon/ipsec_doi.h
	  src/racoon/isakmp_quick.c